k8s/base/app-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: app-a
    app.kubernetes.io/part-of: schwab-assessment
  name: app-a
  namespace: assessment
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: app-a
  type: ClusterIP
